"""Additional os configurations not commonly defined by Bazel"""

constraint_value(
    name = "unknown",
    constraint_setting = "@platforms//os",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "wasi",
    constraint_setting = "@platforms//os",
    visibility = ["//visibility:public"],
)
