load("//cargo:defs.bzl", "cargo_build_script")
load("//rust:defs.bzl", "rust_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

cargo_build_script(
    name = "build_rs",
    srcs = ["build.rs"],
    data = [
        "data.txt",
    ],
    edition = "2018",
)

rust_test(
    name = "test",
    srcs = ["test.rs"],
    edition = "2018",
    deps = [":build_rs"],
)
