load("//cargo:defs.bzl", "cargo_build_info")
load("//rust:defs.bzl", "rust_test")

cargo_build_info(
    name = "build_info",
    out_dir_files = {
        "greeting.txt": '["greeting.txt"]',
        "config.txt": '["nested/config.txt"]',
    },
)

rust_test(
    name = "out_dir_files_test",
    srcs = ["test.rs"],
    edition = "2021",
    deps = [":build_info"],
)
